# voice

./: .gitignore  LICENSE  README.md  START_VOICE_SERVER.bat  VALIDATION_PLAN.md  emotion_config.json  play_audio.ps1  pyproject.toml  requirements.txt  response_analyzer.py  server.py  start_voice_server.sh  voice_server.py
tests/: test_server.py  test_voice_server.py
